--- a/iot-serverless-mqtt-feed/provider/pom.xml
+++ b/iot-serverless-mqtt-feed/provider/pom.xml
@@ -33,6 +33,8 @@
     <spring-boot.version>1.5.8.RELEASE</spring-boot.version>
     <spring-boot.bom.version>1.5.8.Final-redhat-1</spring-boot.bom.version>
     <mqtt.client.version>1.2.0</mqtt.client.version>
+    <mongodb.embedded.version>1.50.5</mongodb.embedded.version>
+    <mongo.driver.version>3.5.0</mongo.driver.version>
   </properties>
 
   <dependencyManagement>
@@ -57,17 +59,22 @@
       <artifactId>spring-boot-starter-activemq</artifactId>
       <version>${spring-boot.version}</version>
     </dependency>
-    <dependency>
+    <!-- dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jpa</artifactId>
+    </dependency-->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-mongodb</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-actuator</artifactId>
     </dependency>
-        <dependency>
-      <groupId>com.h2database</groupId>
-      <artifactId>h2</artifactId>
+    <dependency>
+      <groupId>org.mongodb</groupId>
+      <artifactId>mongo-java-driver</artifactId>
+      <version>${mongo.driver.version}</version>
     </dependency>
 
     <!-- Testing -->
@@ -105,13 +112,15 @@
     <profile>
       <id>local</id>
       <activation>
+      	<activeByDefault>true</activeByDefault>
       </activation>
       <dependencies>
-        <dependency>
-          <groupId>com.h2database</groupId>
-          <artifactId>h2</artifactId>
-          <scope>runtime</scope>
-        </dependency>
+	    <dependency>
+    	  <groupId>de.flapdoodle.embed</groupId>
+		  <artifactId>de.flapdoodle.embed.mongo</artifactId>
+ 	  	  <version>${mongodb.embedded.version}</version>
+ 	  	  <scope>test</scope>
+		</dependency>
       </dependencies>
     </profile>
 
