--- a/iot-serverless-mqtt-feed/provider/pom.xml
+++ b/iot-serverless-mqtt-feed/provider/pom.xml
@@ -119,7 +119,7 @@
     	  <groupId>de.flapdoodle.embed</groupId>
 		  <artifactId>de.flapdoodle.embed.mongo</artifactId>
  	  	  <version>${mongodb.embedded.version}</version>
- 	  	  <scope>test</scope>
+ 	  	  <scope>runtime</scope>
 		</dependency>
       </dependencies>
     </profile>
